# maths_sandbox

./: README.md  goldbach.c
not_vibe/: data.json  pattern.py
not_vibe/OCR/: .gitignore  CMakeLists.txt  Makefile  build.sh  configure.sh  dog2.ppm  main.c  main2.c  n
not_vibe/OCR/src/: create_images.py  data.c  data.h  display.c  fs.c  globals.c  globals.h  image.c  main.c  main2.c  main_save.c  matrix.c  nn.c  nn.h  sdl_img.c  segment.c
not_vibe/OCR/src/headers/: data.h  display.h  fs.h  globals.h  image.h  matrix.h  nn.h  sdl_img.h  segment.h
not_vibe/old_OCR/: data.json  empy_data.json  pattern.py
not_vibe/python/: tree.py
not_vibe/transformer/: .gitignore  CMakeLists.txt  README_OCR.md  README_transformer.md
not_vibe/transformer/src/: data.c  fs.c  globals.c  main.c  matrix.c  nn.c  stack.c  test.c  token.c
not_vibe/transformer/src/headers/: data.h  fs.h  globals.h  matrix.h  nn.h  stack.h  token.h
not_vibe/transformer/src/texts/: text_00001.txt
not_vibe/transformer/src/texts_ans/: text_00001.txt
vibe/: goldbach.c  graph.py  graph2.py  pendulum.py
